# Special_type

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  api.dev.yml  api.local.yml  api.yml  pyproject.toml
adminapp/: admin.py
api/: apps.py  models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_alter_feedback_name.py  0003_auto_20221230_1756.py  0004_alter_feedback_name.py
core/: settings.py  urls.py
core/settings_/: settings.py
nginx/: default.conf
yookassa_payment/: urls.py  views.py
